--- a/033 – Bắt đầu viết hiệu ứng bằng javascript thuần dựa trên kiến thức đã học/index.html
+++ b/033 – Bắt đầu viết hiệu ứng bằng javascript thuần dựa trên kiến thức đã học/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div class="text-center mt-5">
+        <button class="btn btn-info" id="nut1">
+            Click vao de test ham toogle
+        </button>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Khoi noi dung
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum magnam asperiores soluta assumenda explicabo, architecto aliquam? Non atque iure quam!</p>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Footer
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
