--- a/031 – Ba hàm xử lý giao diện cực mạnh trong javascript/index.html
+++ b/031 – Ba hàm xử lý giao diện cực mạnh trong javascript/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo code js</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div class="container text-center mt-5">
+        <button class="btn btn-outline-info n1">
+            Nut so 1
+        </button>
+        <button class="btn btn-outline-danger n2">
+            Nut so 2
+        </button>
+        <button class="btn btn-outline-success n3">
+            Nut so 3
+        </button>
+        <button class="btn btn-outline-secondary n4">
+            Nut so 4
+        </button>
+    </div>
     
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
