--- a/032 – Xử lý sự kiện trong javascript và khái niệm về document ready/index.html
+++ b/032 – Xử lý sự kiện trong javascript và khái niệm về document ready/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <div class="card-columns">
+        <div class="card">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ullam repellat? Quae sit ab similique omnis non, facere earum dolor.</p>
+                <div class="btn btn-block btn-outline-info" id="n1">
+                    View Detail
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio cumque minima ipsa repudiandae repellat, debitis dolorem culpa ducimus doloremque dicta?</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
