--- a/034 – Phương pháp viết hiệu ứng javascript với Animation/index.html
+++ b/034 – Phương pháp viết hiệu ứng javascript với Animation/index.html
@@ -9,6 +9,31 @@
 </head>
 <body>
     
+    <div class="text-center mt-5">
+        <button class="btn btn-info" id="nut1">
+            Click vao de test ham toogle
+        </button>
+    </div>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        Khoi noi dung
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem ipsum dolor sit amet.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum magnam
+                            asperiores soluta assumenda explicabo, architecto aliquam? Non atque iure quam!</p>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Footer
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
