--- a/035 – Viết hiệu ứng 2 chiều nâng cao với javascript/index.html
+++ b/035 – Viết hiệu ứng 2 chiều nâng cao với javascript/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     
+    <button class="btn btn-info btn-block btn-lg" id="nutHieuUngBT">
+        Cach lam toggle class bang tay BT
+    </button>
+    <button class="btn btn-danger btn-block btn-lg" id="nutHieuUngTF">
+        Cach lam toggle class bang tay True false
+    </button>
+    <button class="btn btn-danger">
+        Chuyen dong
+    </button>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
